@@ -1,8 +1,16 @@
+2006-05-07  Stefan Petersen  <spe@localhost.localdomain>
+
+	* src/draw_amacro.c: Daniel Mack - zonque submitted
+	  as a patch (1350283) (with no file attached though) that
+	  renaming stack_t to macro_stack_t would make gerbv build
+	  on darwin.
+
 2005-09-28 Dan McMahill
 
-        * src/drill.c: Remove an lval typecast.  Not only does this get
-	  gerbv to compile with gcc4 and other non-gcc compilers, it was no
-	  longer needed as the types involved were all doubles anyway.
+	* src/drill.c: Remove an lval typecast.  Not only does this get
+	  gerbv to compile with gcc4 and other non-gcc compilers, it 
+	  was no longer needed as the types involved were all doubles 
+	  anyway.
 
 2005-02-15  Stefan Petersen  <spe@siouxsie.umunet.org>
 
